--- a/map.html
+++ b/map.html
@@ -11,7 +11,7 @@
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
             <div class="panel">
-                <iframe src="https://www.google.com/maps/d/embed?mid=10NKJ5vSM5aFRQ9p3yHok03gBk5FEa9A&ehbc=2E312F" width="640" height="480"></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=10NKJ5vSM5aFRQ9p3yHok03gBk5FEa9A&ehbc=2E312F" width="100%" height="480"></iframe>
             </div>
             <button>Next ></button>
             <button>< Back</button>
