--- a/discovery.html
+++ b/discovery.html
@@ -15,7 +15,7 @@
                 <h2>Discovery</h2>
                 <p>Graduate student... was walking whenh he noticed...</p>
             </div>
-            <button>Next ></button>
-            <button>< Back</button>
+            <a href="important-fossils.html"><button>Next ></button></a>
+            <a href="index.html"><button>< Back</button></a>
         </body> 
     </html>  
