--- a/environment.html
+++ b/environment.html
@@ -15,7 +15,7 @@
                 <p>Filler text</p>
             </div>
             <img src="woodland_scenecropped-2.jpg">
-            <button>Next ></button>
-            <button>< Back</button>
+            <a href="skull.html"><button>Next ></button></a>
+            <a href="map.html"><button>< Back</button></a>
         </body> 
     </html>  
