--- a/important-fossils.html
+++ b/important-fossils.html
@@ -20,7 +20,7 @@
                 <h2>1994-1995: Ardi</h2>
                 <img src="ardi unsorted.jfif" alt="The unsorted fossilized bones of an Ardipithecus ramidus.">
             </div>
-            <button>Next ></button>
-            <button>< Back</button>
+            <a href="map.html"><button>Next ></button></a>
+            <a href="discovery.html"><button>< Back</button></a>
         </body> 
     </html>  
