--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <div class="panel">
                 <h2>Virtual Museum: Ardipithecus <em>ramidus</em></h2>
             </div>
-            <button>Enter</button>
+            <a href="discovery.html"><button>Enter</button></a>
         </body>
     </html>
