--- a/skull.html
+++ b/skull.html
@@ -20,7 +20,7 @@
                 <p>Lorem ipsum...</p>
                 <button>View 3D Model</button>
             </div>
-            <button>Next ></button>
-            <button>< Back</button>
+            <a href="species.html"><button>Next ></button></a>
+            <a href="environment.html"><button>< Back</button></a>
         </body> 
     </html>  
