--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
             <div class="panel">
                 <iframe src="https://www.google.com/maps/d/embed?mid=10NKJ5vSM5aFRQ9p3yHok03gBk5FEa9A&ehbc=2E312F" width="100%" height="480"></iframe>
             </div>
-            <button>Next ></button>
-            <button>< Back</button>
+            <a href="environment.html"><button>Next ></button></a>
+            <a href="important-fossils.html"><button>< Back</button></a>
         </body> 
     </html>  
