--- a/skull.html
+++ b/skull.html
@@ -18,7 +18,7 @@
             <div class="panel">
                 <h2>Notable Features</h2>
                 <p>Lorem ipsum...</p>
-                <button>View 3D Model</button>
+                <div class="sketchfab-embed-wrapper"> <iframe title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/ardipithecus-ramidus-skull-1b55fb758d164a60bab6a7d57f750b01?utm_medium=embed&utm_campaign=share-popup&utm_content=1b55fb758d164a60bab6a7d57f750b01" target="_blank" style="font-weight: bold; color: #D1F0B1;"> Ardipithecus ramidus skull </a></p></div>
             </div>
             <a href="species.html"><button>Next ></button></a>
             <a href="environment.html"><button>< Back</button></a>
