--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             <div class="panel">
                 <h2>Virtual Museum: Ardipithecus <em>ramidus</em></h2>
             </div>
-            <a href="discovery.html"><button>Enter</button></a>
+            <img src="hadar-mobile.jpg" alt="Paleoanthropologists unearth fossils in Hadar, Ethiopia">
+            <div class="panel">
+                <p>Ardipithecus ramidus changed the field of anthropology in 2009, when analysis on a near-complete 4.4-million-year-old fossilized skeleton from Ethiopia was published.<br><br>
+                    Enter this virtual museum exhibit to learn more about this fascinating hominin.<br><br>
+                    Note: This virtual museum is best-viewed-on and optimized for mobile devices
+                    </p>
+            </div>
+            <div class="center">
+                <a href="discovery.html"><button>Enter</button></a>
+            </div>
+            
         </body>
     </html>
