--- a/discovery.html
+++ b/discovery.html
@@ -10,10 +10,31 @@
             <nav class="nav">
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
-            <img src="tooth.jpg" alt="A hand holds a juvenile Ardipithecus ramidus tooth against a desert backdrop.">
             <div class="panel">
                 <h2>Discovery</h2>
-                <p>Graduate student... was walking whenh he noticed...</p>
+                <p>Gen Suwa, former anthropology graduate student at UC Berkley, traveled to Aramis in the Middle Awash region of Ethiopia in 1992 to research.<br><br>
+                    While walking around Aramis, he noticed something shiny in the rocks.
+                </p>
+            </div>
+            <img src="digging.png" alt="An archaeologist digs in the soils in Middle Awash, Ethiopia.">
+            <div class="panel">
+                <p>Upon closer inspection of the shining rock, Suwa noticed it was not a rock at all—in fact, it was a hominin tooth root [“A New Kind of Ancestor: Ardipithecus Unveiled”].</p>
+            </div>
+            <img src="tooth.jpg" alt="A tooth root discovered by the archeologist team at Aramis in 1994.">
+            <div class="panel">
+                <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils. In the following days, they found an additional hominin jaw piece with a deciduous molar or baby tooth (ARA-VP-1/129). The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. afarensis, which was the oldest known hominin at the time [“Australopithecus ramidus, a new species of hominin…”].</p>
+            </div>
+            <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
+            <div class="panel">
+                <p>Two months later, UC Berkley graduate student, Yohannes Haile-Selassie, spotted hand bones in the Aramis soil.<br><br>
+                    As the archaeological team searched the area, they found bone after bone: part of a pelvis, leg bones, an ankle, a foot, a hand, an arm, another jaw with teeth, a cranium. By January 1995, the team had unearthed almost an entire skeleton <br><br>
+                    The remains were incredibly brittle, some crumbling as they held them. Fearing for the robustness of the fossil, the researchers cut out chunks of earth containing the fossils to send to the National Museum of Ethiopia for careful removal. Three years later, 100% of the remains had been moved to the lab.<br><br>
+                    The pieces were carefully cast and scanned to be recreated digitally. After 10 models, Suwa felt satisfied with his digitally reconstructed skull. And 14 models later, C. Owen Lovejoy of Kent State felt satisfied with his reconstructed pelvis.
+                    </p>
+            </div>
+            <img src="pelvis-recreation.jpg" alt="A computer-recreated Ar. ramidus pelvis.">
+            <div class="panel">
+                <p>Next up: Important fossil finds of Ar. <em>ramidus</em>.</p>
             </div>
             <a href="important-fossils.html"><button>Next ></button></a>
             <a href="index.html"><button>< Back</button></a>
