--- a/discovery.html
+++ b/discovery.html
@@ -16,15 +16,18 @@
                     While walking around Aramis, he noticed something shiny in the rocks.
                 </p>
             </div>
-            <img src="digging.png" alt="An archaeologist digs in the soils in Middle Awash, Ethiopia.">
+            <img src="digging.png" alt="An archaeologist digs in the soils in Middle Awash, Ethiopia. A view similar to what Gen Suwa may have seen while walking around at Aramis, Ethiopia.">
+            <p class="caption">A view similar to what Gen Suwa may have seen while walking around at Aramis, Ethiopia.</p>
             <div class="panel">
                 <p>Upon closer inspection of the shining rock, Suwa noticed it was not a rock at all—in fact, it was a hominin tooth root [“A New Kind of Ancestor: Ardipithecus Unveiled”].</p>
             </div>
             <img src="tooth.jpg" alt="A tooth root discovered by the archeologist team at Aramis in 1994.">
+            <p class="caption">A juvenile hominin jaw discovered by the team Gen Suwa was part of at Aramis, Ethiopia in 1994 (ARA-VP-1/129).</p>
             <div class="panel">
                 <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils.<br><br>In the following days, they found an additional hominin jaw piece with a deciduous molar, or baby tooth (ARA-VP-1/129). The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. afarensis, which was the oldest known hominin at the time [“Australopithecus ramidus, a new species of hominin…”].</p>
             </div>
             <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
+            <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <em>d, Australopithecus ramidus (APA-VP-1/129);</em> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern)</p>
             <div class="panel">
                 <p>Two months later, UC Berkley graduate student, Yohannes Haile-Selassie, spotted hand bones in the Aramis soil.<br><br>
                     As the archaeological team searched the area, they found bone after bone: part of a pelvis, leg bones, an ankle, a foot, a hand, an arm, another jaw with teeth, a cranium. By January 1995, the team had unearthed almost an entire skeleton.<br><br>
@@ -33,6 +36,7 @@
                     </p>
             </div>
             <img src="pelvis-recreation.jpg" alt="A computer-recreated Ar. ramidus pelvis.">
+            <p class="caption">Digitally-recreated ar. ramidus pelvis from the University Museum at the University of Tokyo.</p>
             <div class="panel">
                 <p>Next up: Important fossil finds of Ar. <em>ramidus</em>.</p>
             </div>
