--- a/important-fossils.html
+++ b/important-fossils.html
@@ -7,20 +7,34 @@
             <title>Ardipithecus Ramidus</title>
         </head>  
         <body>
+            <nav class="nav">
+                <a id="top" href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
+            </nav>
             <div class="panel">
                 <h2>Important fossils</h2>
-                <p>Some important discoveries...</p>
+                <p>Some important fossils found of Ar. <em>ramidus</em> are listed below.</p> 
             </div>
             <div class="panel">
                 <h2>1992-1994: Teeth</h2>
                 <img src="ardipith teeth.jpg" alt="Arranged fossilized teeth belonging to an Ardipithecus Ramidus.">
-                <p>Text from japanese article w pic of molar</p>
+                <p>The teeth of two Ar. <em>ramidus</em> individuals were found in Aramis between 1992 and 1994.<br><br>According to the University Museum at the Univeristy of Tokyo, where Gen Suwa is a professor:<br><br>
+                    <em>"These fossils were definitively more primitive than any known species of the genus Australopithecus. However, pending discovery of even more informative fossils and body parts, the fossils were conservatively published as a new species of the genus Australopithecus."</em>
+                </p>
             </div>
             <div class="panel">
                 <h2>1994-1995: Ardi</h2>
                 <img src="ardi unsorted.jfif" alt="The unsorted fossilized bones of an Ardipithecus ramidus.">
+                <img src="ardi displayed.jpeg" alt="The sorted bones of Ardi">
+                <p>Over three field seasons, the partial skeleton of an Ardipithecus <em>ramidus</em> female named "Ardi" was unearthed from Aramis, Ethiopia.<br><br>The skeleton was carefully removed from its 4.4-million-year-old soil after being shipped to the National Museum Ethiopia.<br><br>It took 17 years for scientists to recreate the extremely fragile skeleton and annouce it was a new species.<br><br> With over million years seniority over Lucy, this is the oldest hominin fossil find to date.</p>
             </div>
-            <a href="map.html"><button>Next ></button></a>
-            <a href="discovery.html"><button>< Back</button></a>
+            <div class="panel">
+                <p>Next up: A map showing locations where Ar. <em>ramidus</em> was found.</p>
+            </div>
+            <div class="center">
+                <a href="discovery.html"><button>< Back</button></a>
+                <a href="map.html"><button>Next ></button></a>
+            </div>
+            
+            
         </body> 
     </html>  
