--- a/map.html
+++ b/map.html
@@ -12,7 +12,7 @@
             </nav>
             <div class="panel">
                 <h2>Map: Ar. <em>ramidus</em></h2>
-                <p>The following map has approximate locations where Ar. <em>ramidus</em> fossils have been found.<br><br><em>Note: I would have used QGIS to make a georeferenced map, but there is no free hosting option for GIS-based maps :(</em></p>
+                <p>The following map has approximate locations where Ar. <em>ramidus</em> fossils have been found.</p>
             </div>
             <div class="panel">
                 <iframe src="https://www.google.com/maps/d/embed?mid=10NKJ5vSM5aFRQ9p3yHok03gBk5FEa9A&ehbc=2E312F" width="100%" height="480"></iframe>
