--- a/species.html
+++ b/species.html
@@ -11,13 +11,60 @@
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
             <div class="panel">
-                <h2>Why was Ardi a new species?</h2>
-                <p>Lorem ipsum...</p>
+                <h2>Distinguishing features</h2>
+                <p>Since Ar. ramidus lacks other derived traits in early hominins, researchers believe that its bipedal traits were acquired shortly after diverging with the last common ancestor with chimpanzees.</p>
+                <p>The following features are some things that make Ardipithecus <em>ramidus</em> unique.</p>
             </div>
-            <img src="ardi.png" alt="Ardi's skeleton next to a model skeleton and model full-body recreation.">
             <div class="panel">
-                <h2>Feature 1</h2>
-                <p>Lorem ipsum...</p>
+                <h2>Dentition</h2>
+                <p>When Gen Suwa discovered the hominin tooth in Ethiopia, researchers found that some of the molar's features were unique from other hominins found prior.</p>
+                <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than Australopithecus <em>afarensis</em> (Lucy), who lived only 1 million years later than Ar. <em>ramidus</em>.</p>
+            </div>
+            <img src="human-jaw.png">
+            <div class="sketchfab-embed-wrapper"> <iframe width=100%;  height=600px; title="Ardipithecus ramidus (2501.1rp96-2) - mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/fa656a356b1d47d6a97881e63f10fdb8/embed"></iframe></div>
+            <img src="chimp jaw.jpg">
+            <div class="panel">
+                <p>The 3rd pre-molar is more asymmetrical than Australopiths and humans.</p>
+                <p>The buccal side of the molars (towards the cheek) are flatter than later hominins, but more bowl-shaped than chimpanzees.<br><br>Distally (on the inside as the teeth go around the jaw), the molars are more bowl-shaped than chimpanzees.</p>
+                <p>The molars have less enamel thickness than other apes. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets were more diverse than chimpanzees. Because of the amount of chewing obligate vegetarian apes require, they need thicker enamel.</p>
+            </div>
+            <img src="ardi-head.jpg">
+            <img src="lucy-head.jpg">
+            <div class="panel">
+                <p>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
+                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue).<br><br>his feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi. Ardi has molar thickness more similar to chimpanzees than A. afarensis too.</p>
+            </div>
+            <div class="panel">
+                <h2>Skull</h2>
+                <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).</p>
+            </div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Skull without mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e37e3a49c95d477ba54f8f55421f8e3f/embed"></iframe></div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height=550px title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div>
+            <div class="sketchfab-embed-wrapper"> <iframe width="100%" height="550px" title="Female Chimp Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/52cb71658a4b46fca43d443c9a91292e/embed"></iframe></div>
+            <div class="panel">
+                <p>Both of these features indicate upright posture in Ar. ramidus. These are both derived traits shared with modern humans. Both traits indicate bipedalism in Ar. ramidus. (makes the skull easier to carry with the spine, less reliant on neck muscles)</p>
+            </div>
+            <div class="panel">
+                <h2>Pelvis</h2>
+                <p>The pelvis of Ar. ramidus is indicative of natural propensity towards both quadrupedal and bipedal locomotion.</p>
+            </div>
+            <img src="ardi-lucy-pelvis.jpeg">
+            <div class="panel">
+                <p>The ilium became wider and shorter, the sacroiliac joint more posterior, and the lower spine more curved. Compared to Lucy’s pelvis, Ardi has a longer lower pelvis and less robusticity.</p>
+            </div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Female Pelvis, 32yo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/84ebbcbd54c34037bdd95ca187b51c05/embed?ui_infos=0"> </iframe> </div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Ardi Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/776fbe5c0c164998849f26f51776265b/embed"> </iframe> </div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Lucy Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/bf5e316dad5d4f7bb75fbb104473e637/embed"> </iframe> </div>
+            <div class="panel">
+                <p>These traits are indicative of bipedalism as they allow for better lower-limb—muscle attachment points when moving bipedally.</p> 
+            </div>
+            <div class="panel">
+                <h2>Arms</h2>
+                <p>The radius of Ar. ramidus does not have features that imply knuckle-walking.<br><br>The trochlear notch on the ulna is more rear-facing than that of other extinct hominins.<br><br>In addition to these, Ardi's wrists are more flexible than those of other apes, allowing the palms to grab branches instead of the fingers.</p>
+            </div>
+            <div class="panel">
+                <h2>Hands</h2>
+                <p>As mentioned above, the palms were the primary part of the hands that grasped branches while climbing.<br><br>The middle part of the hand is more flexible than that of other apes, and more like humans. Ar. ramidus could support its bodyweight on its palms. This adaptation helped it to support its bodyweight in one arm, while grabbing for branches with the other.</p>
             </div>
             <button>Next ></button>
             <a href="skull.html"><button>< Back</button></a>
