--- a/dentition.html
+++ b/dentition.html
@@ -12,7 +12,7 @@
             </nav>
             <div class="panel">
                 <h2>Dentition</h2>
-                <p>When Gen Suwa discovered the hominin molar in Ethiopia, researchers found that some of the tooth's features were unique from other hominins found prior.</p>
+                <p>Because the molars discovered by Gen Suwa and team were some of the first Ar. <em>ramidus</em> fossils discovered, they have been studied extensively since the 1990s.<br><br>Researchers classified these fossils as remains of a new species based on the dentition alone.</p>
             </div>
             <div class="panel">
                 <h2>Molars</h2>
@@ -31,28 +31,23 @@
             <img src="chimp jaw.jpg" alt="Modern chimpanzee jaw.">
             <p class="caption">Model modern chimpanzee jaw.</p>
             <div class="panel">
+                <h2>Jaw</h2>
                 <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from the V-shape to a U-shape.<br><br>The molars are large, like a chimp, but with less asymmetry on the buccal side (towards the cheek) than a chimp, but more than Australopiths.<br><br>The incisors are between the size of chimpanzees and Australopiths.</p>
             </div>
             <img src="ardi-head.jpg">
+            <p class="caption">Model Ardipithecus <em>ramidus</em> head.</p>
             <img src="lucy-head.jpg">
+            <p class="caption">Model Australopithecus <em>afarensis</em> head.</p>
             <div class="panel">
                 <p>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
                     The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue).<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.</p>
             </div>
             <div class="panel">
-                <h2>Skull</h2>
-                <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).</p>
-            </div>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Skull without mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e37e3a49c95d477ba54f8f55421f8e3f/embed"></iframe></div><p class="caption">3D model homo sapiens (human) skull.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height=550px title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div><p class="caption">3D model Ar. <em>ramidus</em> skull.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width="100%" height="550px" title="Female Chimp Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/52cb71658a4b46fca43d443c9a91292e/embed"></iframe></div><p class="caption">3D model modern chimpanzee skull.</p>
-            <div class="panel">
-                <p>Both of these features indicate upright posture in Ar. ramidus. These are both derived traits shared with modern humans. Both traits indicate bipedalism in Ar. ramidus. (makes the skull easier to carry with the spine, less reliant on neck muscles)</p>
+                <p>Next up: Ar. <em>ramidus</em>'s skull.</p>
             </div>
             <div class="center">
-                <a href="dentition.html"><button>< Back</button></a>
-                <a href="species.html"><button>Next ></button></a>
+                <a href="environment.html"><button>< Back</button></a>
+                <a href="skull.html"><button>Next ></button></a>
             </div>
-          
-        </body> 
-    </html>  
+        </body>
+    </html>
