--- a/discovery.html
+++ b/discovery.html
@@ -26,8 +26,8 @@
             <div class="panel">
                 <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils.<br><br>In the following days, they found an additional hominin jaw piece with a deciduous molar, or baby tooth (ARA-VP-1/129). The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. afarensis, which was the oldest known hominin at the time [“Australopithecus ramidus, a new species of hominin…”].</p>
             </div>
-            <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
-            <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <u>d, Australopithecus ramidus (APA-VP-1/129);</u> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
+            <img src="gona.jpg" alt="The desert in the Middle Awash region of Ethiopia">
+            <p class="caption">The desert in the Middle Awash region of Ethiopia.</p>
             <div class="panel">
                 <p>Two months later, UC Berkley graduate student, Yohannes Haile-Selassie, spotted hand bones in the Aramis soil.<br><br>
                     As the archaeological team searched the area, they found bone after bone: part of a pelvis, leg bones, an ankle, a foot, a hand, an arm, another jaw with teeth, a cranium. By January 1995, the team had unearthed almost an entire skeleton.<br><br>
