--- a/map.html
+++ b/map.html
@@ -17,7 +17,9 @@
             <div class="panel">
                 <iframe src="https://www.google.com/maps/d/embed?mid=10NKJ5vSM5aFRQ9p3yHok03gBk5FEa9A&ehbc=2E312F" width="100%" height="480"></iframe>
             </div>
-            <a href="environment.html"><button>Next ></button></a>
-            <a href="important-fossils.html"><button>< Back</button></a>
+            <div class="center">
+                <a href="important-fossils.html"><button>< Back</button></a>
+                <a href="environment.html"><button>Next ></button></a>
+            </div>
         </body> 
     </html>  
