--- a/dentition.html
+++ b/dentition.html
@@ -11,28 +11,24 @@
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
             <div class="panel">
-                <h2>Dentition</h2>
-                <p>Because the molars discovered by Gen Suwa and team were some of the first Ar. <em>ramidus</em> fossils discovered, they have been studied extensively since the 1990s.<br><br>Researchers classified these fossils as remains of a new species based on the dentition alone.</p>
-            </div>
-            <div class="panel">
                 <h2>Molars</h2>
                 <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than Australopithecus <em>afarensis</em> (Lucy), who lived only 1 million years later than Ar. <em>ramidus</em>.</p>
             </div>
             <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
             <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <u>d, Australopithecus ramidus (APA-VP-1/129);</u> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
             <div class="panel">
-                <p>The buccal side of the molars (towards the cheek) are flatter than later hominins, but more bowl-shaped than chimpanzees.<br><br>Distally (on the inside as the teeth go around the jaw), the molars are more bowl-shaped than chimpanzees.</p>
-                <p>The molars have less enamel thickness than known apes like chimpanzees (but more than Australopiths). The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets were more diverse than chimpanzees. Because of the amount of chewing obligate vegetarian apes require, they need thicker enamel.</p>
-                <p>Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence.</p>
+                <p>Both the distal and buccal (inside and outside) edges of the molars are bowl-shaped. </p>
+                <p>The molars have less enamel thickness than chimpanzees, but more than Australopiths. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets included more meats than chimpanees.</p>
+                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence.</p>
             </div>
-            <img src="a boisei jaw.jpg" alt="Model A. boisei jaw">
-            <p class="caption">Model A. <em>boisei</em> jaw.</p>
+            <img src="lucy jaw.jpg" alt="Australopithecus afarensis jaw">
+            <p class="caption">Model A. <em>afarensis</em> jaw.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width=100%;  height=450px; title="Ardipithecus ramidus (2501.1rp96-2) - mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/fa656a356b1d47d6a97881e63f10fdb8/embed"></iframe></div><p class="caption">3D model of Ardipithecus <em>ramidus</em> jaw.</p>
             <img src="chimp jaw.jpg" alt="Modern chimpanzee jaw.">
             <p class="caption">Model modern chimpanzee jaw.</p>
             <div class="panel">
                 <h2>Jaw</h2>
-                <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from the V-shape to a U-shape.<br><br>The molars are large, like a chimp, but with less asymmetry on the buccal side (towards the cheek) than a chimp, but more than Australopiths.<br><br>The incisors are between the size of chimpanzees and Australopiths.</p>
+                <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from a V-shape to a U-shape.<br><br>The molars are large like chimps, with buccal asymmetry somehwere betweens chimps and Australopiths.<br><br>The incisoral size is also between a chimp and Australopith.</p>
             </div>
             <img src="ardi-head.jpg">
             <p class="caption">Model Ardipithecus <em>ramidus</em> head.</p>
@@ -40,7 +36,7 @@
             <p class="caption">Model Australopithecus <em>afarensis</em> head.</p>
             <div class="panel">
                 <p>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
-                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue).<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.</p>
+                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue) [See above photos].<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.</p>
             </div>
             <div class="panel">
                 <p>Next up: Ar. <em>ramidus</em>'s skull.</p>
