--- a/skull.html
+++ b/skull.html
@@ -11,41 +11,12 @@
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
             <div class="panel">
-                <h2>Dentition</h2>
-                <p>When Gen Suwa discovered the hominin molar in Ethiopia, researchers found that some of the tooth's features were unique from other hominins found prior.</p>
-            </div>
-            <div class="panel">
-                <h2>Molars</h2>
-                <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than Australopithecus <em>afarensis</em> (Lucy), who lived only 1 million years later than Ar. <em>ramidus</em>.</p>
-            </div>
-            <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
-            <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <u>d, Australopithecus ramidus (APA-VP-1/129);</u> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
-            <div class="panel">
-                <p>The buccal side of the molars (towards the cheek) are flatter than later hominins, but more bowl-shaped than chimpanzees.<br><br>Distally (on the inside as the teeth go around the jaw), the molars are more bowl-shaped than chimpanzees.</p>
-                <p>The molars have less enamel thickness than known apes like chimpanzees (but more than Australopiths). The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets were more diverse than chimpanzees. Because of the amount of chewing obligate vegetarian apes require, they need thicker enamel.</p>
-                <p>Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence.</p>
-            </div>
-            <img src="a boisei jaw.jpg" alt="Model A. boisei jaw">
-            <p class="caption">Model A. <em>boisei</em> jaw.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100%;  height=450px; title="Ardipithecus ramidus (2501.1rp96-2) - mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/fa656a356b1d47d6a97881e63f10fdb8/embed"></iframe></div><p class="caption">3D model of Ardipithecus <em>ramidus</em> jaw.</p>
-            <img src="chimp jaw.jpg" alt="Modern chimpanzee jaw.">
-            <p class="caption">Model modern chimpanzee jaw.</p>
-            <div class="panel">
-                <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from the V-shape to a U-shape.<br><br>The molars are large, like a chimp, but with less asymmetry on the buccal side (towards the cheek) than a chimp, but more than Australopiths.<br><br>The incisors are between the size of chimpanzees and Australopiths.</p>
-            </div>
-            <img src="ardi-head.jpg">
-            <img src="lucy-head.jpg">
-            <div class="panel">
-                <p>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
-                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue).<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.</p>
-            </div>
-            <div class="panel">
                 <h2>Skull</h2>
-                <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).</p>
+                <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).<br><br>The brain case of Ar. <em>ramidus</em> is similar to a modern chimpanzee, around 400 cubic centimeters. This cavity is more ovular in chimpanzees, and more circular in Australopiths and humans.</p>
             </div>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Skull without mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e37e3a49c95d477ba54f8f55421f8e3f/embed"></iframe></div><p class="caption">3D model homo sapiens (human) skull.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height=550px title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div><p class="caption">3D model Ar. <em>ramidus</em> skull.</p>
-            <div class="sketchfab-embed-wrapper"> <iframe width="100%" height="550px" title="Female Chimp Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/52cb71658a4b46fca43d443c9a91292e/embed"></iframe></div><p class="caption">3D model modern chimpanzee skull.</p>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Skull without mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e37e3a49c95d477ba54f8f55421f8e3f/embed"></iframe></div><p class="caption">3D model homo sapiens (human) skull.</p>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div><p class="caption">3D model Ar. <em>ramidus</em> skull.</p>
+            <div class="sketchfab-embed-wrapper"> <iframe width="100%" height="450px" title="Female Chimp Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/52cb71658a4b46fca43d443c9a91292e/embed"></iframe></div><p class="caption">3D model modern chimpanzee skull.</p>
             <div class="panel">
                 <p>Both of these features indicate upright posture in Ar. ramidus. These are both derived traits shared with modern humans. Both traits indicate bipedalism in Ar. ramidus. (makes the skull easier to carry with the spine, less reliant on neck muscles)</p>
             </div>
